# python-build-standalone

./: .gitignore  CLAUDE.md  CONTRIBUTING.rst  Cargo.toml  Justfile  LICENSE.liblzma.txt  README.md  build.py  ci-matrix.py  ci-runners.yaml  ci-targets.yaml  latest-release.json  pyproject.toml  requirements.dev.txt  requirements.win-arm64.txt  requirements.win.txt
.github/workflows/: apple.yml  check.yml  linux.yml  macos.yml  release.yml  vlinux.yml  vmacos.yml  vrelease.yml  windows.yml
cpython-unix/: Makefile  build-cpython-host.sh  build-cpython.sh  build-main.py  build-openssl-3.0.sh  build-openssl-3.5.sh  build-sqlite.sh  build-tcl.sh  build-tk.sh  build-xz.sh  build.cross-loongarch64.Dockerfile  build.cross-riscv64.Dockerfile  build.cross.Dockerfile  build.py  extension-modules.yml  patch-checksharedmods-disable-3.15.patch  patch-configure-bolt-skip-funcs-3.15.patch  patch-configure-disable-stdlib-mod-3.12.patch  patch-cpython-configure-target-triple-musl-3.10.patch  patch-cpython-configure-target-triple-musl-3.12.patch  patch-getpath-use-base_executable-for-executable_dir-314.patch  patch-getpath-use-base_executable-for-executable_dir.patch  patch-jit-llvm-version-3.13.patch  patch-jit-llvm-version-3.14.patch  patch-jit-llvm-version-3.15.patch  patch-openssl-3.5-riscv-vlenb-register.patch  patch-python-3.14-asyncio-static.patch  patch-python-getpath-3.14.patch  patch-python-getpath-backport-3.11.patch  patch-python-getpath-backport-3.12.patch  patch-python-getpath-backport-3.13.patch  patch-python-getpath-library.patch  patch-python-relative-build-details.patch  targets.yml
cpython-windows/: build.py
cpython-windows/xz-support/: README  config.h
docs/: building.rst  quirks.rst  status.rst
pythonbuild/: buildenv.py  cpython.py  downloads.py  utils.py
src/: github.rs  main.rs  release.rs  validation.rs  verify_distribution.py
