[package]
name = "pythonbuild"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
apple-sdk = "0.6.0"
bytes = "1.11.0"
clap = "4.5.52"
duct = "1.1.1"
flate2 = "1.1.5"
futures = "0.3.30"
goblin = "0.10.3"
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client"] }
hyper-util = { version = "0.1.18" }
normalize-path = "0.2.1"
object = "0.37.3"
octocrab = { version = "0.47.1", features = ["rustls", "stream"] }
once_cell = "1.21.3"
pdb = "0.8.0"
pep440_rs = "0.7.3"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["rustls-tls-webpki-roots", "stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
scroll = "0.13.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
text-stub-library = "0.9.0"
tokio = "1.48.0"
tokio-util = "0.7.17"
url = "2.5.7"
version-compare = "0.2.1"
zip = "6.0.0"
zstd = "0.13.3"
